--- a/wired-button.html
+++ b/wired-button.html
@@ -10,6 +10,10 @@
         padding: 8px 10px;
         position: relative;
         text-align: center;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
       }
 
       .overlay {
