added button elevation and visual click indication

--- a/wired-button.html
+++ b/wired-button.html
@@ -16,6 +16,10 @@
         user-select: none;
       }
 
+       :host(:active) path {
+        transform: scale(0.97) translate(1.5%, 1.5%);
+      }
+
       .overlay {
         position: absolute;
         top: 0;
@@ -33,9 +37,10 @@
         stroke: currentColor;
         stroke-width: 0.7;
         fill: transparent;
+        transition: transform 0.05s ease;
       }
     </style>
-    <span>{{text}}</span>
+    <span>[[text]]</span>
     <div class="overlay">
       <svg id="svg">
       </svg>
@@ -49,20 +54,31 @@
         return {
           text: {
             type: String,
-            observer: 'relayout'
+            observer: '_relayout'
+          },
+          elevation: {
+            type: Number,
+            value: 1,
+            observer: '_relayout'
           }
         };
       }
 
       connectedCallback() {
         super.connectedCallback();
+        this._connected = true;
         this.style.opacity = 0;
         Polymer.RenderStatus.beforeNextRender(this, () => {
           setTimeout(() => {
-            this.relayout();
+            this._relayout();
             this.style.opacity = 1;
           }, 100);
         });
+      }
+
+      disconnectedCallback() {
+        super.disconnectedCallback();
+        this._connected = false;
       }
 
       _clearNode(node) {
@@ -71,12 +87,24 @@
         }
       }
 
-      relayout() {
+      _relayout() {
+        if (!this._connected) {
+          return;
+        }
         this._clearNode(this.$.svg);
         var s = this.getBoundingClientRect();
-        this.$.svg.setAttribute("width", s.width);
-        this.$.svg.setAttribute("height", s.height);
+        var elev = Math.min(Math.max(1, this.elevation), 5);
+        var w = s.width + ((elev - 1) * 2);
+        var h = s.height + ((elev - 1) * 2);
+        this.$.svg.setAttribute("width", w);
+        this.$.svg.setAttribute("height", h);
         _WIRES_.rectangle(this.$.svg, 0, 0, s.width, s.height);
+        for (var i = 1; i < elev; i++) {
+          (_WIRES_.line(this.$.svg, (i * 2), s.height + (i * 2), s.width + (i * 2), s.height + (i * 2))).style.opacity = (85 - (i * 10)) / 100;
+          (_WIRES_.line(this.$.svg, s.width + (i * 2), s.height + (i * 2), s.width + (i * 2), i * 2)).style.opacity = (85 - (i * 10)) / 100;
+          (_WIRES_.line(this.$.svg, (i * 2), s.height + (i * 2), s.width + (i * 2), s.height + (i * 2))).style.opacity = (85 - (i * 10)) / 100;
+          (_WIRES_.line(this.$.svg, s.width + (i * 2), s.height + (i * 2), s.width + (i * 2), i * 2)).style.opacity = (85 - (i * 10)) / 100;
+        }
       }
     }
     window.customElements.define(WiredButton.is, WiredButton);
