--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,10 @@
       .yellowbg {
         background: #fff59d;
       }
+
+      wired-button {
+        margin: 0 5px;
+      }
     </style>
   </custom-style>
 </head>
@@ -52,6 +56,20 @@
             background: #fff59d;
           }
         </style>
+      </template>
+    </demo-snippet>
+
+    <h3>Button elevation</h3>
+    <p>
+      Default elevation: 1<br>Max elevation: 5
+    </p>
+    <demo-snippet>
+      <template>
+        <wired-button text="Elevation 1"></wired-button>
+        <wired-button elevation="2" text="Elevation 2"></wired-button>
+        <wired-button elevation="3" text="Elevation 3"></wired-button>
+        <wired-button elevation="4" text="Elevation 4"></wired-button>
+        <wired-button elevation="5" text="Elevation 5"></wired-button>
       </template>
     </demo-snippet>
   </div>
