--- a/demo/index.html
+++ b/demo/index.html
@@ -42,6 +42,7 @@
         <wired-button text="Button One"></wired-button>
         <wired-button class="blue big" text="Button Two"></wired-button>
         <wired-button class="yellowbg" text="Button Three"></wired-button>
+        <wired-button disabled text="Disabled"></wired-button>
 
         <style is="custom-style">
           .blue {
