--- a/wired-button.html
+++ b/wired-button.html
@@ -14,6 +14,10 @@
         -ms-user-select: none;
         -webkit-user-select: none;
         user-select: none;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        display: inline-flex;
       }
 
        :host(:active) path {
